--- a/package.json
+++ b/package.json
@@ -20,6 +20,13 @@
   "config": {
     "entry": {
       "main": "./src/ts/main.ts"
+    },
+    "ui": {
+      "breakpoints": {},
+      "ms": {
+        "ratio": 1.25,
+        "base": 0.8
+      }
     }
   },
   "dependencies": {
@@ -33,7 +40,6 @@
     "@babel/preset-env": "^7.8.3",
     "@babel/preset-typescript": "^7.8.3",
     "@fullhuman/postcss-purgecss": "^4.0.0",
-    "@types/clipboard": "^2.0.1",
     "@types/debug": "^4.1.5",
     "@types/feather-icons": "^4.7.0",
     "@types/mini-css-extract-plugin": "^1.2.2",
@@ -49,6 +55,7 @@
     "cross-env": "^7.0.2",
     "css-loader": "^5.0.1",
     "debug": "^4.1.1",
+    "esbuild-loader": "^2.13.1",
     "eslint": "^7.3.1",
     "eslint-config-prettier": "^8.1.0",
     "eslint-import-resolver-typescript": "^2.0.0",
