--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -5,13 +5,13 @@
   ],
   "plugins": ["stylelint-scss", "stylelint-order"],
   "rules": {
-    "at-rule-no-unknown": null,
     "block-no-empty": true,
     "color-hex-length": "long",
     "color-no-invalid-hex": true,
     "color-named": "never",
     "comment-no-empty": true,
     "order/properties-alphabetical-order": true,
-    "scss/at-rule-no-unknown": true
+    "at-rule-no-unknown": null,
+    "scss/at-rule-no-unknown": [true, { "ignoreAtRules": ["screen", "layer"] }]
   }
 }
