--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
       "breakpoints": {},
       "ms": {
         "ratio": 1.25,
-        "base": 0.8
+        "base": 12.8
       }
     }
   },
@@ -33,25 +33,14 @@
     "friendly-words": "^1.1.10"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0",
-    "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/plugin-proposal-object-rest-spread": "^7.8.3",
-    "@babel/plugin-transform-classes": "^7.9.5",
-    "@babel/preset-env": "^7.8.3",
-    "@babel/preset-typescript": "^7.8.3",
-    "@fullhuman/postcss-purgecss": "^4.0.0",
     "@types/debug": "^4.1.5",
     "@types/feather-icons": "^4.7.0",
     "@types/mini-css-extract-plugin": "^1.2.2",
     "@types/node": "^14.0.13",
-    "@types/terser-webpack-plugin": "^5.0.2",
     "@typescript-eslint/eslint-plugin": "^4.15.2",
     "@typescript-eslint/parser": "^4.15.2",
     "autoprefixer": "^10.2.3",
-    "babel-loader": "^8.0.6",
-    "bourbon": "^7.0.0",
     "clipboard": "^2.0.4",
-    "core-js": "^3.6.4",
     "cross-env": "^7.0.2",
     "css-loader": "^5.0.1",
     "debug": "^4.1.1",
@@ -66,21 +55,17 @@
     "html-webpack-plugin": "^5.0.0",
     "mini-css-extract-plugin": "^1.3.4",
     "postcss": "^8.2.4",
-    "postcss-csso": "^5.0.0",
+    "postcss-import": "^14.0.2",
     "postcss-loader": "^5.0.0",
-    "postcss-reporter": "^7.0.2",
     "prettier": "^2.0.0",
-    "rfs": "^9.0.3",
     "sanitize.css": "^12.0.1",
-    "sass": "^1.25.0",
-    "sass-loader": "^11.0.0",
-    "sass-mq": "^5.0.1",
     "stylelint": "^13.3.3",
     "stylelint-config-prettier": "^8.0.1",
     "stylelint-config-recommended-scss": "^4.2.0",
     "stylelint-order": "^4.0.0",
     "stylelint-prettier": "^1.1.2",
     "stylelint-scss": "^3.17.1",
+    "tailwindcss": "^2.1.2",
     "ts-node": "^10.0.0",
     "typescript": "^4.1.3",
     "webpack": "^5.20.0",
