--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,9 +1,6 @@
 {
-  "extends": [
-    "stylelint-prettier/recommended",
-    "stylelint-config-recommended-scss"
-  ],
-  "plugins": ["stylelint-scss", "stylelint-order"],
+  "extends": ["stylelint-config-recommended", "stylelint-prettier/recommended"],
+  "plugins": ["stylelint-order"],
   "rules": {
     "block-no-empty": true,
     "color-hex-length": "long",
@@ -11,7 +8,6 @@
     "color-named": "never",
     "comment-no-empty": true,
     "order/properties-alphabetical-order": true,
-    "at-rule-no-unknown": null,
-    "scss/at-rule-no-unknown": [true, { "ignoreAtRules": ["screen", "layer"] }]
+    "at-rule-no-unknown": [true, { "ignoreAtRules": ["screen", "layer"] }]
   }
 }
