Some Dockerfile tweaks

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,48 +1,54 @@
-**/__pycache__
-**/.*.env
-**/.cache
-**/.circleci
-**/.classpath
-**/.cov
-**/.dockerignore
-**/.env
-**/.git
-**/.gitignore
-**/.log
-**/.mypy_cache
-**/.project
-**/.pytest_cache
-**/.python-version
-**/.settings
-**/.slugignore
-**/.toolstarget
-**/.vs
-**/.vscode
+**/*.*lintrc.*
 **/*.*proj.user
 **/*.anaconda
 **/*.dbmdl
 **/*.DS_Store
 **/*.egg-info
 **/*.envrc
-**/*.eslintrc.yml
 **/*.flake8
 **/*.jfm
 **/*.md
 **/*.sublime-*
+**/.*.env
+**/.*ignore
+**/.cache
+**/.circleci
+**/.classpath
+**/.cov
+**/.env
+**/.git
+**/.github
+**/.hypothesis
+**/.log
+**/.mypy_cache
+**/.prettierrc.*
+**/.project
+**/.pytest_cache
+**/.python-version
+**/.settings
+**/.tmp
+**/.toolstarget
+**/.vs
+**/.vscode
+**/__pycache__
 **/azds.yaml
-# **/bin
 **/charts
 **/dist
 **/docker-compose*
 **/Dockerfile*
 **/heroku.yml
 **/log
+**/Makefile
 **/node_modules
 **/npm-debug.log
 **/obj
+**/out/
 **/pytest-report
 **/secrets.dev.yaml
+**/sitecustomize.py
 **/values.dev.yaml
+
+config/**
+!config/gunicorn_config.py
 e2e/
 LICENSE
-config
