Fixing CI config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,13 +25,11 @@ jobs:
           # yamllint disable rule:line-length
           command: |
             curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/install-poetry.py | python - -y
-            source $HOME/.poetry/env
-            poetry install --no-interaction --no-dev -E tests
+            $HOME/.local/bin/poetry install --no-interaction --no-dev -E tests
             yarn install --prod
           # yamllint enable rule:line-length
       - run: |
-          source $HOME/.poetry/env
-          poetry run pytest
+          $HOME/.local/bin/poetry run pytest
       - save_cache:
           key: deps9-{{ .Branch }}-{{ checksum "poetry.lock" }}
           paths:
