--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -54,12 +54,10 @@ jobs:
           key: venv-${{ runner.os }}-${{ steps.full-python-version.outputs.version }}-${{ hashFiles('**/poetry.lock') }}
       - name: Install dependencies
         run: |
-          source $HOME/.poetry/env
-          poetry install --no-interaction --no-dev -E tests
+          $HOME/.local/bin/poetry install --no-interaction --no-dev -E tests
           yarn install --prod
       - name: Run pytest
         env:
           TESTS_SKIP_INDEX: "1"
         run: |
-          source $HOME/.poetry/env
-          poetry run pytest
+          $HOME/.local/bin/poetry run pytest
