--- a/config/Dockerfile.template
+++ b/config/Dockerfile.template
@@ -6,7 +6,7 @@ COPY ./package.json ./yarn.lock /app/
 
 RUN yarn install --prod
 
-FROM python:{{ python_version }}-slim
+FROM python:{{ python_version|join('.') }}-slim
 
 ENV LC_ALL=C.UTF-8 LANG=C.UTF-8 PYTHONUNBUFFERED=1
 
@@ -34,4 +34,4 @@ EXPOSE {{ port }}
 
 USER ${APP_USER}:${APP_USER}
 
-CMD ["gunicorn", "wsgi:application", "--config", "file:{{ gunicorn_config }}"]
+CMD ["gunicorn", "wsgi:application"]
