--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,7 +6,7 @@
     {
       "label": "echo",
       "type": "shell",
-      "command": "echo ${env:PYENV_ROOT}"
+      "command": "echo ${env:PYENV_ROOT} ${workspaceFolder}"
     },
     {
       "type": "npm",
