--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "dev": "cross-env NODE_ENV=development webpack --config webpack.config.ts --progress",
     "lint": "yarn lint:eslint && yarn lint:styles",
     "lint:eslint": "eslint '**/*.ts' '**/*.js'",
-    "lint:styles": "stylelint 'src/scss/**/*.scss'",
+    "lint:styles": "stylelint 'src/css/**/*.css'",
     "prod": "cross-env NODE_ENV=production webpack --config webpack.config.ts --progress",
     "watch": "yarn run build:dev --watch"
   },
@@ -35,32 +35,32 @@
   "devDependencies": {
     "@types/debug": "^4.1.5",
     "@types/feather-icons": "^4.7.0",
-    "@types/mini-css-extract-plugin": "^1.2.2",
-    "@types/node": "^15.12.1",
-    "@typescript-eslint/eslint-plugin": "^4.15.2",
-    "@typescript-eslint/parser": "^4.15.2",
+    "@types/mini-css-extract-plugin": "^2",
+    "@types/node": "^14",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.0.0",
     "autoprefixer": "^10.2.3",
     "clipboard": "^2.0.4",
     "cross-env": "^7.0.2",
-    "css-loader": "^5.0.1",
+    "css-loader": "^6.0.0",
     "debug": "^4.1.1",
     "esbuild-loader": "^2.13.1",
-    "eslint": "^7.3.1",
+    "eslint": "^8.0.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-import-resolver-typescript": "^2.0.0",
     "eslint-import-resolver-webpack": "^0.13.0",
     "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-prettier": "^3.1.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "feather-icons": "^4.24.0",
     "html-webpack-plugin": "^5.0.0",
-    "mini-css-extract-plugin": "^1.3.4",
+    "mini-css-extract-plugin": "^2",
     "postcss": "^8.2.4",
     "postcss-import": "^14.0.2",
-    "postcss-loader": "^5.0.0",
+    "postcss-loader": "^6.0.0",
     "prettier": "^2.0.0",
-    "sanitize.css": "^12.0.1",
+    "sanitize.css": "^13.0.0",
     "stylelint": "^13.3.3",
-    "stylelint-config-prettier": "^8.0.1",
+    "stylelint-config-prettier": "^9.0.0",
     "stylelint-config-recommended": "^5.0.0",
     "stylelint-order": "^4.0.0",
     "stylelint-prettier": "^1.1.2",
