--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -38,22 +38,15 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: "14"
-      - name: Get yarn version
-        id: yarn-version
-        shell: bash
-        run: echo ::set-output name=version::$(yarn --version)
-        if: ${{ !env.ACT }}
       - name: Get full python version
         shell: bash
         id: python-version
         # yamllint disable-line rule:line-length
         run: echo ::set-output name=version::$(python -c "import sys; print('-'.join(map(str, sys.version_info)))")
       - name: Install poetry
-        # yamllint disable rule:line-length
         run: |
-          curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/install-poetry.py | python - -y
-        # yamllint enable rule:line-length
-      - name: Set up cache
+          curl -sSL https://install.python-poetry.org | python - -y
+      - name: Set up python cache
         uses: actions/cache@v2
         with:
           path: |
