--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,31 +8,30 @@ authors = ["Michael Van Wickle <mvanwickle@gmail.com>"]
 python = "^3.8"
 attrs = "^21.0"
 environs = "^9.0"
-flask = "^2"
+flask = "^2.0.0"
 flask-cors = "^3.0.8"
 flask-redis = "^0.4.0"
 gunicorn = { version = "^20.0" }
 loguru = "^0.5.0"
-Pillow = "^8.0"
+Pillow = "^9.0.0"
 semver = "^2.9.1"
 webargs = "^8.0.0"
 whitenoise = { version = "^5.0.1", extras = ["brotli"] }
 # Test Dependencies
 pytest = { version = "^6.0", optional = true }
-hypothesis = { version = "^6", optional = true }
+hypothesis = { version = "^6.0.0", optional = true }
 pytesseract = { version = "^0.3.4", optional = true }
+# Development dependencies
+pre-commit = { version = "^2.3.0", optional = true }
+memory_profiler = { version = "^0.60.0", optional = true }
 
 [tool.poetry.dev-dependencies]
-colorama = "^0.4.3"
 isort = "^5.0"
-memory_profiler = "^0.58.0"
-pre-commit = "^2.3.0"
-psutil = "^5.6.5"
-ptpython = "^3"
 
 [tool.poetry.extras]
 tests = ["pytest", "hypothesis"]
 ocr = ["pytesseract"]
+dev = ["pytest", "hypothesis", "pre-commit", "memory_profiler"]
 
 [tool.poetry.scripts]
 
