--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build:dev": "cross-env NODE_ENV=development webpack --config webpack.config.ts --progress",
     "build:prod": "cross-env NODE_ENV=production webpack --config webpack.config.ts --progress",
     "dev": "cross-env NODE_ENV=development webpack --config webpack.config.ts --progress",
-    "lint": "yarn lint:eslint && yarn lint:styles",
+    "lint": "concurrently \"yarn:lint:*\"",
     "lint:eslint": "eslint '**/*.ts' '**/*.js'",
     "lint:styles": "stylelint 'src/css/**/*.css'",
     "prod": "cross-env NODE_ENV=production webpack --config webpack.config.ts --progress",
@@ -41,6 +41,7 @@
     "@typescript-eslint/parser": "^5.0.0",
     "autoprefixer": "^10.2.3",
     "clipboard": "^2.0.4",
+    "concurrently": "^7.0.0",
     "cross-env": "^7.0.2",
     "css-loader": "^6.0.0",
     "debug": "^4.1.1",
@@ -58,7 +59,6 @@
     "postcss-import": "^14.0.2",
     "postcss-loader": "^6.0.0",
     "prettier": "^2.0.0",
-    "sanitize.css": "^13.0.0",
     "stylelint": "^14",
     "stylelint-config-prettier": "^9.0.0",
     "stylelint-config-recommended": "^6",
