--- a/src/ts/tsconfig.json
+++ b/src/ts/tsconfig.json
@@ -6,6 +6,7 @@
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "isolatedModules": true,
-    "baseUrl": ".."
-  }
+    "baseUrl": "../.."
+  },
+  "include": ["./**/*.ts"]
 }
