--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,7 +8,7 @@ repos:
       - id: check-builtin-literals
       - id: check-merge-conflict
       - id: check-json
-        exclude: "(tsconfig|launch|tasks)\\.json"
+        exclude: '(tsconfig|launch|tasks)\.json'
       - id: check-yaml
       - id: check-toml
       - id: mixed-line-ending
@@ -31,8 +31,11 @@ repos:
           - flake8-docstrings
           - flake8-import-order
           - flake8-pytest-style
+  - repo: https://github.com/PyCQA/isort
+    rev: 5.10.1
+    hooks:
+      - id: isort
   - repo: https://github.com/pre-commit/mirrors-prettier
     rev: v2.5.1
     hooks:
       - id: prettier
-        exclude: "src/webpack-records-(dev|prod)\\.json"
