--- a/pytest.ini
+++ b/pytest.ini
@@ -2,11 +2,12 @@
 testpaths =
     tests
 addopts =
-    -x
+    --exitfirst
     --showlocals
-    --durations 5
-    -vv
-    --ff
+    --durations=5
+    --failed-first
+    --import-mode=importlib
+    --verbosity=2
 filterwarnings =
     ignore::PendingDeprecationWarning
     ignore::DeprecationWarning
