--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,21 +17,23 @@ Pillow = "^9.0.0"
 semver = "^2.9.1"
 webargs = "^8.0.0"
 whitenoise = { version = "^5.0.1", extras = ["brotli"] }
-# Test Dependencies
-pytest = { version = "^7.0", optional = true }
-hypothesis = { version = "^6.0.0", optional = true }
-pytesseract = { version = "^0.3.4", optional = true }
-# Development dependencies
-pre-commit = { version = "^2.3.0", optional = true }
-memory_profiler = { version = "^0.60.0", optional = true }
+# OCR
+# pytesseract = { version = "^0.3.4", optional = true }
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 isort = "^5.0"
+pre-commit = { version = "^2.3.0" }
+memory_profiler = { version = "^0.60.0" }
+
+[tool.poetry.group.test]
+optional = true
+
+[tool.poetry.group.test.dependencies]
+pytest = { version = "^7.0" }
+hypothesis = { version = "^6.0.0" }
 
 [tool.poetry.extras]
-tests = ["pytest", "hypothesis"]
 ocr = ["pytesseract"]
-dev = ["pytest", "hypothesis", "pre-commit", "memory_profiler"]
 
 [tool.poetry.scripts]
 
