--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -36,7 +36,7 @@ jobs:
         with:
           node-version: "18"
       - name: Install python dependencies
-        run: $HOME/.local/bin/poetry install --no-interaction --with test --without dev
+        run: poetry install --no-interaction --with test --without dev
       - name: Install node dependencies
         uses: bahmutov/npm-install@v1
         if: ${{ !env.ACT }}
@@ -45,4 +45,4 @@ jobs:
           TESTS_SKIP_INDEX: "1"
           # REDIS_URL: "redis://localhost:6379"
         run: |
-          $HOME/.local/bin/poetry run pytest
+          poetry run pytest
