--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["Michael Van Wickle <mvanwickle@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.10"
-attrs = "^21.0"
+attrs = "^22.0"
 environs = "^9.0"
 flask = "^2.0.0"
 flask-cors = "^3.0.8"
@@ -16,14 +16,14 @@ loguru = "^0.6.0"
 Pillow = "^9.0.0"
 semver = "^2.9.1"
 webargs = "^8.0.0"
-whitenoise = { version = "^5.0.1", extras = ["brotli"] }
+whitenoise = { version = "^6.0.0", extras = ["brotli"] }
 # OCR
-# pytesseract = { version = "^0.3.4", optional = true }
+pytesseract = { version = "^0.3.4", optional = true }
 
 [tool.poetry.group.dev.dependencies]
 isort = "^5.0"
-pre-commit = { version = "^2.3.0" }
-memory_profiler = { version = "^0.60.0" }
+pre-commit = { version = "^3.0.0" }
+memory_profiler = { version = "^0.61.0" }
 
 [tool.poetry.group.test]
 optional = true
