--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,6 @@
 ---
 default_language_version:
-  python: python3.9
+  python: python3.11
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.4.0
@@ -12,30 +12,12 @@ repos:
       - id: check-yaml
       - id: check-toml
       - id: mixed-line-ending
-  - repo: https://github.com/pre-commit/pygrep-hooks
-    rev: v1.10.0
+      - id: check-added-large-files
+  - repo: https://github.com/charliermarsh/ruff-pre-commit
+    rev: v0.0.265
     hooks:
-      - id: python-check-blanket-noqa
+      - id: ruff
   - repo: https://github.com/psf/black
     rev: 23.3.0
     hooks:
       - id: black
-  - repo: https://github.com/PyCQA/flake8
-    rev: 6.0.0
-    hooks:
-      - id: flake8
-        additional_dependencies:
-          - flake8-annotations
-          - flake8-bugbear
-          - flake8-comprehensions
-          - flake8-docstrings
-          - flake8-import-order
-          - flake8-pytest-style
-  - repo: https://github.com/PyCQA/isort
-    rev: 5.12.0
-    hooks:
-      - id: isort
-  # - repo: https://github.com/pre-commit/mirrors-prettier
-  #   rev: v2.7.1
-  #   hooks:
-  #     - id: prettier
