Remove typing extensions import

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,6 +10,7 @@ jobs:
     env:
       POETRY_VIRTUALENVS_IN_PROJECT: "true"
     runs-on: ubuntu-latest
+    timeout-minutes: 15
     # container: python:3.10-slim
     # services:
     #   redis:
@@ -29,7 +30,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: "3.10"
+          python-version: "3.11"
           cache: "poetry"
       - name: Set up Node
         uses: actions/setup-node@v3
